# work

1_fake_data_generation/: Makefile  README.md  pyproject.toml
1_fake_data_generation/fake_user_data/: fake_users_20250820_015815.csv  fake_users_20250820_020314.csv
1_fake_data_generation/src/: __init__.py  csv_utils.py  fake_user_generator.py  gcs_utils.py  generate_fake_users.py  list_gcs_files.py
2_etl_gcs_to_bq/: .env.dev  Dockerfile  README.md  docker-compose.yaml  pg.txt  pyproject.toml
2_etl_gcs_to_bq/config/: airflow.cfg
2_etl_gcs_to_bq/dags/: gcs_to_bq_etl.py
2_etl_gcs_to_bq/dags/modules/: bigquery_emulator.py  data_generation.py  encryption.py  gcs_emulator.py  pipeline_tasks.py
2_etl_gcs_to_bq/infra/: .env.dev  Dockerfile  docker-compose.yaml
3_etl_bq_to_bq_Encryption/: docker-compose.yaml
infra/: README.md  podman-compose.yml
